test for jannis

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 	          <div class="row no-gutters slider-text align-items-center">
 		          <div class="col-md-7 ftco-animate">
 		          	<div class="text w-100">
-		          		<h2>Welcome to Health Coach</h2>
-			            <h1 class="mb-4">Get in shape faster, live your happy life</h1>
-			            <p><a href="#" class="btn btn-primary">Learn more</a> <a href="#" class="btn btn-white">Contact us</a></p>
+		          		<h2>Willkommen bei Shortbreak !</h2>
+			            <h1 class="mb-4">Ihr Coach in Sachen Work-Live-Health-Balance</h1>
+			            <p><a href="#" class="btn btn-primary">Erfahren Sie mehr.</a> <a href="#" class="btn btn-white">Kontakrieren Sie uns.</a></p>
 		            </div>
 		          </div>
 		        </div>
