--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	          <div class="row no-gutters slider-text align-items-center">
 		          <div class="col-md-7 ftco-animate">
 		          	<div class="text w-100">
-		          		<h2>A Fresh approach to healthy life</h2>
+		          		<h2>Dein neues Lifestyle-Gadget</h2>
 			            <h1 class="mb-4 color-white">Unlock your potential with good nutrition</h1>
 			            <p><a href="#" class="btn btn-primary">Learn more</a> <a href="#" class="btn btn-white">Contact us</a></p>
 		            </div>
