--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	          <div class="row no-gutters slider-text align-items-center justify-content-end">
 		          <div class="col-md-6 ftco-animate">
 		          	<div class="text w-100">
-		          		<h2>Welcome Health Coach</h2>
+		          		<h2>HAHAHA</h2>
 			            <h1 class="mb-4">You can transform health through habit change</h1>
 			            <p><a href="#" class="btn btn-primary">Learn more</a> <a href="#" class="btn btn-white">Contact us</a></p>
 		            </div>
