--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	          <div class="row no-gutters slider-text align-items-center justify-content-end">
 		          <div class="col-md-6 ftco-animate">
 		          	<div class="text w-100">
-		          		<h2>HAHAHA</h2>
+		          		<h2>Welcome Health Coach</h2>
 			            <h1 class="mb-4">You can transform health through habit change</h1>
 			            <p><a href="#" class="btn btn-primary">Learn more</a> <a href="#" class="btn btn-white">Contact us</a></p>
 		            </div>
@@ -177,85 +177,7 @@
 			</div>
 		</section>
 
-		<section class="ftco-section ftco-no-pt ftco-no-pb">
-			<div class="container-fluid px-md-0">
-				<div class="row no-gutters">
-					<div class="col-md-3 d-flex align-items-stretch">
-						<div class="consultation w-100 text-center px-4 px-md-5">
-							<h3 class="mb-4">Healthcare Services</h3>
-							<p>A small river named Duden flows by their place and supplies</p>
-							<a href="#" class="btn-custom">See Services</a>
-						</div>
-					</div>
-					<div class="col-md-6 d-flex align-items-stretch">
-						<div class="consultation consul w-100 px-4 px-md-5">
-							<div class="text-center">
-								<h3 class="mb-4">Free Consultation</h3>
-							</div>
-							<form action="#" class="appointment-form">
-								<div class="row">
-									<div class="col-md-12 col-lg-6 col-xl-4">
-										<div class="form-group">
-				    					<input type="text" class="form-control" placeholder="First Name">
-				    				</div>
-									</div>
-									<div class="col-md-12 col-lg-6 col-xl-4">
-										<div class="form-group">
-				    					<input type="text" class="form-control" placeholder="Last Name">
-				    				</div>
-									</div>
-									<div class="col-md-12 col-lg-6 col-xl-4">
-										<div class="form-group">
-				    					<div class="form-field">
-		          					<div class="select-wrap">
-		                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
-		                      <select name="" id="" class="form-control">
-		                      	<option value="">Services</option>
-		                        <option value="">Services 1</option>
-		                        <option value="">Services 2</option>
-		                      </select>
-		                    </div>
-				              </div>
-				    				</div>
-									</div>
-									<div class="col-md-12 col-lg-6 col-xl-4">
-										<div class="form-group">
-				    					<div class="input-wrap">
-				            		<div class="icon"><span class="ion-md-calendar"></span></div>
-				            		<input type="text" class="form-control appointment_date" placeholder="Date">
-			            		</div>
-				    				</div>
-									</div>
-									<div class="col-md-12 col-lg-6 col-xl-4">
-										<div class="form-group">
-				    					<div class="input-wrap">
-				            		<div class="icon"><span class="ion-ios-clock"></span></div>
-				            		<input type="text" class="form-control appointment_time" placeholder="Time">
-			            		</div>
-				    				</div>
-									</div>
-									<div class="col-md-12 col-lg-6 col-xl-4">
-										<div class="form-group">
-				              <input type="submit" value="Appointment" class="btn btn-white py-2 px-4">
-				            </div>
-									</div>
-								</div>
-		    			</form>
-		    	  </div>
-					</div>
-					<div class="col-md-3 d-flex align-items-stretch">
-						<div class="consultation w-100 text-center px-4 px-md-5">
-							<h3 class="mb-4">Find A Health Expert</h3>
-							<p>A small river named Duden flows by their place and supplies</p>
-							<a href="#" class="btn-custom">Meet our health coach</a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-
-    <section class="ftco-section testimony-section bg-light">
+   <!-- <section class="ftco-section testimony-section bg-light">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -340,7 +262,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <section class="ftco-section">
     	<div class="container">
@@ -473,7 +395,7 @@
       </div>
     </section>
 		
-		<section class="ftco-intro" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
+		<!-- <section class="ftco-intro" style="background-image: url(images/bg_1.jpg);" data-stellar-background-ratio="0.5">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row">
@@ -489,7 +411,7 @@
 			</div>
 		</section>
 
-    <!-- <section class="ftco-section">
+    <section class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -534,7 +456,7 @@
 	        </div>
         </div>
     	</div>
-    </section> -->
+    </section> 
 
     <section class="ftco-section bg-light">
     	<div class="container">
@@ -681,7 +603,7 @@
     </section>
 		
 
-    <!-- <section class="ftco-section ftco-no-pb ftco-no-pt">
+     <section class="ftco-section ftco-no-pb ftco-no-pt">
       <div class="container">
       	<div class="row">
 	      	<div class="col-md-12">
@@ -705,11 +627,89 @@
       </div>
     </section> -->
 
+	<section class="ftco-section ftco-no-pt ftco-no-pb">
+		<div class="container-fluid px-md-0">
+			<div class="row no-gutters">
+				<div data-tf-widget="sy7dXc88" data-tf-iframe-props="title=Kontakt" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+				<!--
+				<div class="col-md-3 d-flex align-items-stretch">
+					<div class="consultation w-100 text-center px-4 px-md-5">
+						<h3 class="mb-4">Healthcare Services</h3>
+						<p>A small river named Duden flows by their place and supplies</p>
+						<a href="#" class="btn-custom">See Services</a>
+					</div>
+				</div>
+				<div class="col-md-6 d-flex align-items-stretch">
+					<div class="consultation consul w-100 px-4 px-md-5">
+						<div class="text-center">
+							<h3 class="mb-4">Free Consultation</h3>
+						</div>
+						<form action="#" class="appointment-form">
+							<div class="row">
+								<div class="col-md-12 col-lg-6 col-xl-4">
+									<div class="form-group">
+									<input type="text" class="form-control" placeholder="First Name">
+								</div>
+								</div>
+								<div class="col-md-12 col-lg-6 col-xl-4">
+									<div class="form-group">
+									<input type="text" class="form-control" placeholder="Last Name">
+								</div>
+								</div>
+								<div class="col-md-12 col-lg-6 col-xl-4">
+									<div class="form-group">
+									<div class="form-field">
+								  <div class="select-wrap">
+						  <div class="icon"><span class="fa fa-chevron-down"></span></div>
+						  <select name="" id="" class="form-control">
+							  <option value="">Services</option>
+							<option value="">Services 1</option>
+							<option value="">Services 2</option>
+						  </select>
+						</div>
+						  </div>
+								</div>
+								</div>
+								<div class="col-md-12 col-lg-6 col-xl-4">
+									<div class="form-group">
+									<div class="input-wrap">
+								<div class="icon"><span class="ion-md-calendar"></span></div>
+								<input type="text" class="form-control appointment_date" placeholder="Date">
+							</div>
+								</div>
+								</div>
+								<div class="col-md-12 col-lg-6 col-xl-4">
+									<div class="form-group">
+									<div class="input-wrap">
+								<div class="icon"><span class="ion-ios-clock"></span></div>
+								<input type="text" class="form-control appointment_time" placeholder="Time">
+							</div>
+								</div>
+								</div>
+								<div class="col-md-12 col-lg-6 col-xl-4">
+									<div class="form-group">
+						  <input type="submit" value="Appointment" class="btn btn-white py-2 px-4">
+						</div>
+								</div>
+							</div>
+					</form>
+			  </div>
+				</div>
+				<div class="col-md-3 d-flex align-items-stretch">
+					<div class="consultation w-100 text-center px-4 px-md-5">
+						<h3 class="mb-4">Find A Health Expert</h3>
+						<p>A small river named Duden flows by their place and supplies</p>
+						<a href="#" class="btn-custom">Meet our health coach</a>
+					</div>
+				</div>-->
+			</div>
+		</div>
+	</section>
 
 
     <footer class="footer">
 			<div class="container">
-				<div class="row justify-content-center">
+				<!--<div class="row justify-content-center">
 					<div class="col-10 col-lg-6">
 						<div class="subscribe mb-5">
 							<form action="#" class="subscribe-form">
@@ -720,7 +720,7 @@
               </form>
 						</div>
 					</div>
-				</div>
+				</div>-->
 				<div class="row">
 					<div class="col-md-4 col-lg-5">
 						<div class="row">
