remove unnecessary parts

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-		<div class="wrap">
+	<!--	<div class="wrap">
 			<div class="container">
 				<div class="row justify-content-between">
 						<div class="col d-flex align-items-center">
@@ -40,7 +40,7 @@
 						</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	    	<a class="navbar-brand" href="index.html">Health<span>coach<i class="fa fa-leaf"></i></span></a>
@@ -49,14 +49,12 @@
 	      </button>
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	        	<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-	        	<li class="nav-item"><a href="coach.html" class="nav-link">Coach</a></li>
-	        	<li class="nav-item"><a href="pricing.html" class="nav-link">Pricing</a></li>
-	        	<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-	          <li class="nav-item"><a href="success-stories.html" class="nav-link">Stories</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+				<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
+				<li class="nav-item"><a href="#blog" class="nav-link">Blog</a></li>
+	        	<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+	        	<li class="nav-item"><a href="#service" class="nav-link">Wie funktioniert's?</a></li>
+				<li class="nav-item"><a href="#coach" class="nav-link">Coach & App</a></li>
+	          <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -112,7 +110,7 @@
 	    </div>
 	  </div>
 		
-    <section class="ftco-section ftco-services">
+    <section id="blog" class="ftco-section ftco-services">
     	<div class="container">
     		<div class="row">
           <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
@@ -149,7 +147,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb bg-light">
+    <section id ="about" class="ftco-section ftco-no-pt ftco-no-pb bg-light">
 			<div class="container">
 				<div class="row no-gutters">
 					<div class="col-md-5 p-md-5 img img-2 mt-5 mt-md-0" style="background-image: url(images/coach-1.jpg);">
@@ -157,7 +155,7 @@
 					<div class="col-md-7 wrap-about py-4 py-md-5 ftco-animate">
 	          <div class="heading-section mb-5">
 	          	<div class="pl-md-5">
-		          	<span class="subheading mb-2">Welcome to Healthcare</span>
+		          <!--<span class="subheading mb-2">Welcome to Healthcare</span>-->	
 		            <h2 class="mb-2">Hello! Health Care is a natural way of improving your health</h2>
 	            </div>
 	          </div>
@@ -264,12 +262,12 @@
       </div>
     </section>-->
 
-    <section class="ftco-section">
+    <section id="service" class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
-          	<span class="subheading mb-3">Other Services</span>
-            <h2>How it works?</h2>
+          <!--<span class="subheading mb-3">Other Services</span>-->	
+            <h2>Wie funktioniert's?</h2>
           </div>
         </div>
     		<div class="row">
@@ -321,12 +319,12 @@
     	</div>
     </section>
 
-		<section class="ftco-section ftco-no-pb bg-light">
+		<section id="coach" class="ftco-section ftco-no-pb bg-light">
       <div class="container">
         <div class="row justify-content-center pb-5 mb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
-          	<span class="subheading mb-3">Stories</span>
-            <h2>Successfull Stories</h2>
+          <!--<span class="subheading mb-3">Stories</span>-->	
+            <h2>Coach & App</h2>
           </div>
         </div>
         <div class="row ftco-animate">
@@ -707,8 +705,10 @@
 
 
     <footer class="footer">
-			<div class="container">
-				<!--<div class="row justify-content-center">
+			<div id="contact"class="container">
+				<!--Put Typeform here
+					
+					<div class="row justify-content-center">
 					<div class="col-10 col-lg-6">
 						<div class="subscribe mb-5">
 							<form action="#" class="subscribe-form">
