--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
 	<section class="ftco-section ftco-no-pt ftco-no-pb">
 		<div class="container-fluid px-md-0">
 			<div class="row no-gutters">
-				<div data-tf-widget="QTJ5h0ne" data-tf-iframe-props="title=Shortbreak" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+				<div data-tf-widget="QTJ5h0ne" data-tf-hide-headers data-tf-iframe-props="title=Shortbreak" data-tf-medium="snippet" style="width:100%;height:400px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
 				<!--
 				<div class="col-md-3 d-flex align-items-stretch">
 					<div class="consultation w-100 text-center px-4 px-md-5">
