--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	        	<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="#service" class="nav-link">Wie funktioniert's?</a></li>
 				<li class="nav-item"><a href="#coach" class="nav-link">Coach & App</a></li>
-	          <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+	          <li class="nav-item"><a href="#contact" class="nav-link">Zur App</a></li>
 	        </ul>
 	      </div>
 	    </div>
@@ -119,7 +119,7 @@
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Exercise Program</h3>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-                <p><a href="#" class="btn btn-primary btn-outline-primary">Read more</a></p>
+                <p><a href="blog-single.html" class="btn btn-primary btn-outline-primary">Read more</a></p>
               </div>
             </div>      
           </div>
@@ -129,7 +129,7 @@
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Nutrition Plans</h3>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-                <p><a href="#" class="btn btn-primary btn-outline-primary">Read more</a></p>
+                <p><a href="blog-single.html" class="btn btn-primary btn-outline-primary">Read more</a></p>
               </div>
             </div>    
           </div>
@@ -139,7 +139,7 @@
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Diet Program</h3>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-                <p><a href="#" class="btn btn-primary btn-outline-primary">Read more</a></p>
+                <p><a href="blog-single.html" class="btn btn-primary btn-outline-primary">Read more</a></p>
               </div>
             </div>      
           </div>
