--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	          <div class="row no-gutters slider-text align-items-center">
 		          <div class="col-md-7 ftco-animate">
 		          	<div class="text w-100">
-		          		<h2>Dein neues Lifestyle-Gadget im Büro</h2>
+		          		<h2>Wellness fürs Büro.</h2>
 			            <h1 class="mb-4 color-white">Wie unsere Community dich gesund macht!</h1>
 			            <p><a href="#" class="btn btn-primary">Mehr erfahren</a> <a href="#" class="btn btn-white">Kontaktieren Sie uns</a></p>
 		            </div>
