--- a/index.html
+++ b/index.html
@@ -156,13 +156,21 @@
 	          <div class="heading-section mb-5">
 	          	<div class="pl-md-5">
 		          <!--<span class="subheading mb-2">Welcome to Healthcare</span>-->	
-		            <h2 class="mb-2">Hello! Health Care is a natural way of improving your health</h2>
+		            <h2 class="mb-2">Hi! Lass mich dein neuer Coach sein.</h2>
 	            </div>
 	          </div>
 	          <div class="pl-md-5">
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-							<div class="founder d-flex align-items-center mt-5">
+				  <p align="center">Leichtigkeit, Produktivität und Fokus.
+					  Damit wird dein Business durch die Decke gehen!
+
+					  Und DU auch! <br>
+
+					  Ich bin Raphael und erschaffe Freiheit.
+					  Im Business, der Familie und in jeder Beziehung - vor allem in der Beziehung zu dir selbst. <br><br></p>
+
+				  <p>Unser gemeinsames Ziel wird es sein, deinen Körper kraftvoll, beweglich zu machen und deinen Geist aus dem Gedankenkarussell zu lösen. Damit du 100% gesund und vital bist.
+				  </p>
+				  <div class="founder d-flex align-items-center mt-5">
 								<div class="img" style="background-image: url(images/coach-1.jpg);"></div>
 								<div class="text pl-3">
 									<h3 class="mb-0">Raphael Kiemann</h3>
