change images, smaller adaptions and some fixes

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		          <div class="col-md-7 ftco-animate">
 		          	<div class="text w-100">
 		          		<h2>Willkommen bei Shortbreak !</h2>
-			            <h1 class="mb-4">Ihr Coach in Sachen Work-Live-Health-Balance</h1>
+			            <h1 class="mb-4 color-white">Ihr Coach in Sachen Work-<br>Live-Health-Balance</h1>
 			            <p><a href="#" class="btn btn-primary">Mehr erfahren.</a> <a href="#" class="btn btn-white">Kontaktieren Sie uns.</a></p>
 		            </div>
 		          </div>
@@ -81,7 +81,7 @@
 	      <div class="slider-item js-fullheight" style="background-image:url(images/bg_2.jpg);">
 	      	<div class="overlay"></div>
 	        <div class="container">
-	          <div class="row no-gutters slider-text align-items-center">
+	          <div class="row no-gutters slider-text align-items-center justify-content-end"">
 		          <div class="col-md-7 ftco-animate">
 		          	<div class="text w-100">
 		          		<h2>Wellness fürs Büro.</h2>
@@ -96,8 +96,8 @@
 	      <div class="slider-item js-fullheight" style="background-image:url(images/bg_3.jpg);">
 	      	<div class="overlay"></div>
 	        <div class="container">
-	          <div class="row no-gutters slider-text align-items-center justify-content-end">
-		          <div class="col-md-6 ftco-animate">
+	          <div class="row no-gutters slider-text align-items-center">
+		          <div class="col-md-7 ftco-animate">
 		          	<div class="text w-100">
 		          		<h2>Dein Gesundheits Coach</h2>
 			            <h1 class="mb-4">Mache deine Gesundheit zur Gewohnheit.</h1>
@@ -119,7 +119,7 @@
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Was tun bei Rückenschmerzen am Arbeitsplatz?</h3>
                 <p>Wer kennt es nicht? Rücken und Nacken schmerzen nach acht Stunden Arbeit sitzend am Schreibtisch. Diese 3 Lifehacks helfen sofort! </p>
-                <p><a href="blog-single.html" class="btn btn-primary btn-outline-primary">Mehr erfahren</a></p>
+                <p><a href="blog-1.html" class="btn btn-primary btn-outline-primary">Mehr erfahren</a></p>
               </div>
             </div>      
           </div>
@@ -129,19 +129,9 @@
               <div class="media-body p-2 mt-3">
                 <h3 class="heading">Wie ziehe ich neue Mitarbeiter an?</h3>
                 <p>Die neuesten BGM-Maßnahmen für moderne Unternehmen.</p>
-                <p><a href="blog-single.html" class="btn btn-primary btn-outline-primary">Mehr erfahren</a></p>
+                <p><a href="blog-2.html" class="btn btn-primary btn-outline-primary">Mehr erfahren</a></p>
               </div>
             </div>    
-          </div>
-          <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
-            <div class="d-block services-wrap text-center">
-              <div class="img" style="background-image: url(images/services-3.jpg);"></div>
-              <div class="media-body p-2 mt-3">
-                <h3 class="heading">Diet Program</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-                <p><a href="blog-single.html" class="btn btn-primary btn-outline-primary">Read more</a></p>
-              </div>
-            </div>      
           </div>
         </div>
     	</div>
@@ -362,25 +352,6 @@
 									<div class="col-md-11">
 										<div class="stories-wrap d-md-flex">
 											<div class="img" style="background-image: url(images/person-2.jpg);"></div>
-											<div class="text p-4 py-xl-5 px-xl-5 d-flex align-items-center">
-												<div class="desc w-100">
-													<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-													<p class="mb-5">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-													<div class="pt-4">
-														<p class="name mb-0">Rony Smith</p>
-														<span class="position">Client/Messenger</span>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="item">
-								<div class="row justify-content-center">
-									<div class="col-md-11">
-										<div class="stories-wrap d-md-flex">
-											<div class="img" style="background-image: url(images/person-3.jpg);"></div>
 											<div class="text p-4 py-xl-5 px-xl-5 d-flex align-items-center">
 												<div class="desc w-100">
 													<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
