--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <section id="blog" class="ftco-section ftco-services">
     	<div class="container">
     		<div class="row">
+				<div class="col-md-2 d-flex services align-self-stretch px-2 ftco-animate"></div>
           <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
             <div class="d-block services-wrap text-center">
               <div class="img" style="background-image: url(images/services-1.jpg);"></div>
@@ -132,7 +133,8 @@
                 <p><a href="blog-2.html" class="btn btn-primary btn-outline-primary">Mehr erfahren</a></p>
               </div>
             </div>    
-          </div>
+		  </div>
+		  <div class="col-md-2 d-flex services align-self-stretch px-2 ftco-animate"></div>
         </div>
     	</div>
     </section>
