update jannis texte

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		          <div class="col-md-7 ftco-animate">
 		          	<div class="text w-100">
 		          		<h2>Willkommen bei Shortbreak !</h2>
-			            <h1 class="mb-4 color-white">Ihr Coach in Sachen Work-<br>Live-Health-Balance</h1>
+			            <h1 class="mb-4 color-white">Ihr Coach in Sachen Work-<br>Life-Health-Balance</h1>
 			            <p><a href="#" class="btn btn-primary">Mehr erfahren.</a> <a href="#" class="btn btn-white">Kontaktieren Sie uns.</a></p>
 		            </div>
 		          </div>
@@ -83,37 +83,37 @@
 	        <div class="container">
 	          <div class="row no-gutters slider-text align-items-center justify-content-end"">
 		          <div class="col-md-7 ftco-animate">
-		          	<div class="text w-100">
-		          		<h2>Wellness fürs Büro.</h2>
-			            <h1 class="mb-4 color-white">Wie unsere Community dich gesund macht!</h1>
-			            <p><a href="#" class="btn btn-primary">Mehr erfahren</a> <a href="#" class="btn btn-white">Kontaktieren Sie uns</a></p>
-		            </div>
-		          </div>
-		        </div>
-	        </div>
-	      </div>
+					  <!--<div class="text w-100">
+                          <h2>Wellness fürs Büro.</h2>
+                        <h1 class="mb-4 color-white">Wie unsere Community dich gesund macht!</h1>
+                        <p><a href="#" class="btn btn-primary">Mehr erfahren</a> <a href="#" class="btn btn-white">Kontaktieren Sie uns</a></p>
+                    </div> -->
+                  </div>
+                </div>
+            </div>
+          </div>
 
-	      <div class="slider-item js-fullheight" style="background-image:url(images/bg_3.jpg);">
-	      	<div class="overlay"></div>
-	        <div class="container">
-	          <div class="row no-gutters slider-text align-items-center">
-		          <div class="col-md-7 ftco-animate">
-		          	<div class="text w-100">
-		          		<h2>Dein Gesundheits Coach</h2>
-			            <h1 class="mb-4">Mache deine Gesundheit zur Gewohnheit.</h1>
-			            <p><a href="#" class="btn btn-primary">Mehr erfahren</a> <a href="#" class="btn btn-white">Kontaktieren Sie uns</a></p>
-		            </div>
-		          </div>
-		        </div>
-	        </div>
-	      </div>
-	    </div>
-	  </div>
-		
+          <div class="slider-item js-fullheight" style="background-image:url(images/bg_3.jpg);">
+              <div class="overlay"></div>
+            <div class="container">
+              <div class="row no-gutters slider-text align-items-center">
+                  <div class="col-md-7 ftco-animate">
+                      <div class="text w-100">
+                          <h2>Dein Gesundheits Coach</h2>
+                        <h1 class="mb-4">Mache deine Gesundheit zur Gewohnheit.</h1>
+                        <p><a href="#" class="btn btn-primary">Mehr erfahren</a> <a href="#" class="btn btn-white">Kontaktieren Sie uns</a></p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
     <section id="blog" class="ftco-section ftco-services">
-    	<div class="container">
-    		<div class="row">
-				<div class="col-md-2 d-flex services align-self-stretch px-2 ftco-animate"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-2 d-flex services align-self-stretch px-2 ftco-animate"></div>
           <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
             <div class="d-block services-wrap text-center">
               <div class="img" style="background-image: url(images/services-1.jpg);"></div>
@@ -122,7 +122,7 @@
                 <p>Wer kennt es nicht? Rücken und Nacken schmerzen nach acht Stunden Arbeit sitzend am Schreibtisch. Diese 3 Lifehacks helfen sofort! </p>
                 <p><a href="blog-1.html" class="btn btn-primary btn-outline-primary">Mehr erfahren</a></p>
               </div>
-            </div>      
+            </div>
           </div>
           <div class="col-md-4 d-flex services align-self-stretch px-4 ftco-animate">
             <div class="d-block services-wrap text-center">
@@ -132,35 +132,35 @@
                 <p>Die neuesten BGM-Maßnahmen für moderne Unternehmen.</p>
                 <p><a href="blog-2.html" class="btn btn-primary btn-outline-primary">Mehr erfahren</a></p>
               </div>
-            </div>    
-		  </div>
-		  <div class="col-md-2 d-flex services align-self-stretch px-2 ftco-animate"></div>
+            </div>
+          </div>
+          <div class="col-md-2 d-flex services align-self-stretch px-2 ftco-animate"></div>
         </div>
-    	</div>
+        </div>
     </section>
 
     <section id ="about" class="ftco-section ftco-no-pt ftco-no-pb bg-light">
-			<div class="container">
-				<div class="row no-gutters">
-					<div class="col-md-5 p-md-5 img img-2 mt-5 mt-md-0" style="background-image: url(images/coach-1.jpg);">
-					</div>
-					<div class="col-md-7 wrap-about py-4 py-md-5 ftco-animate">
-	          <div class="heading-section mb-5">
-	          	<div class="pl-md-5">
-		          <!--<span class="subheading mb-2">Welcome to Healthcare</span>-->	
-		            <h2 class="mb-2">Hi! Lass mich dein neuer Coach sein.</h2>
+            <div class="container">
+                <div class="row no-gutters">
+                    <div class="col-md-5 p-md-5 img img-2 mt-5 mt-md-0" style="background-image: url(images/coach-1.jpg);">
+                    </div>
+                    <div class="col-md-7 wrap-about py-4 py-md-5 ftco-animate">
+              <div class="heading-section mb-5">
+                  <div class="pl-md-5">
+                  <!--<span class="subheading mb-2">Welcome to Healthcare</span>-->
+		            <h2 class="mb-2" align="center">Hi! Lass mich dein neuer Coach sein.</h2>
 	            </div>
 	          </div>
 	          <div class="pl-md-5">
 				  <p align="center">Leichtigkeit, Produktivität und Fokus.
 					  Damit wird dein Business durch die Decke gehen!
 
-					  Und DU auch! <br>
+					  Und DU auch! <br><br></p>
 
-					  Ich bin Raphael und erschaffe Freiheit.
-					  Im Business, der Familie und in jeder Beziehung - vor allem in der Beziehung zu dir selbst. <br><br></p>
+				  <p>Ich bin Raphael und erschaffe Freiheit.
+					  Im Business, der Familie und in jeder Beziehung - vor allem in der Beziehung zu dir selbst.
 
-				  <p>Unser gemeinsames Ziel wird es sein, deinen Körper kraftvoll, beweglich zu machen und deinen Geist aus dem Gedankenkarussell zu lösen. Damit du 100% gesund und vital bist.
+				  Unser gemeinsames Ziel wird es sein, deinen Körper kraftvoll, beweglich zu machen und deinen Geist aus dem Gedankenkarussell zu lösen. Damit du 100% gesund und vital bist.
 				  </p>
 				  <div class="founder d-flex align-items-center mt-5">
 								<div class="img" style="background-image: url(images/coach-1.jpg);"></div>
