--- a/blog-1.html
+++ b/blog-1.html
@@ -257,7 +257,7 @@
                 <div class="text">
                   <h3 class="heading"><a href="blog-1.html">Was tun bei Rückenschmerzen am Arbeitsplatz?</a></h3>
                   <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Jan. 30, 2020</a></div>
+                    <div><a href="#"><span class="icon-calendar"></span> Feb 08., 2022</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
                     <div><a href="#"><span class="icon-chat"></span> 19</a></div>
                   </div>
@@ -268,7 +268,7 @@
                 <div class="text">
                   <h3 class="heading"><a href="blog-2.html">Wie ziehe ich neue Mitarbeiter an?</a></h3>
                   <div class="meta">
-                    <div><a href="#"><span class="icon-calendar"></span> Jan. 30, 2020</a></div>
+                    <div><a href="#"><span class="icon-calendar"></span> Feb. 10, 2022</a></div>
                     <div><a href="#"><span class="icon-person"></span> Admin</a></div>
                     <div><a href="#"><span class="icon-chat"></span> 19</a></div>
                   </div>
@@ -290,15 +290,15 @@
               </div>
             </div>
 
-            <div class="sidebar-box ftco-animate">
-              <h3>Paragraph</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+              <!--<div class="sidebar-box ftco-animate">
+                <h3>Paragraph</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
+              </div> -->
             </div>
-          </div>
 
+          </div>
         </div>
-      </div>
-    </section> <!-- .section -->
+      </section> <!-- .section -->
 
     <footer class="footer">
 			<div id="contact"class="container">					
