--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
             		<span class="flaticon-diet"></span>
               </div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Follow the program</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">Starte mit nur einem Click.</h3>
+                <p>XXX</p>
               </div>
             </div>      
           </div>
@@ -288,8 +288,8 @@
             		<span class="flaticon-workout"></span>
               </div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Work for result</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">See the difference.</h3>
+                <p>XXX</p>
               </div>
             </div>    
           </div>
@@ -299,8 +299,8 @@
             		<span class="flaticon-diet-1"></span>
               </div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Eat healthy food</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">Mache Bewegung zur Gewohnheit.</h3>
+                <p>Wir unterstützen dich bei der Durchführung regelmäßiger shortbreaks durch tägliche Erinnerungen.  </p>
               </div>
             </div>      
           </div>
@@ -310,8 +310,8 @@
             		<span class="flaticon-first"></span>
               </div>
               <div class="media-body p-2 mt-3">
-                <h3 class="heading">Enjoy your life</h3>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                <h3 class="heading">Profitiere langfristig.</h3>
+                <p>Bewegung wird Teil deiner Identität. Lass dich von niemandem aufhalten, auch nicht von dir selbst!</p>
               </div>
             </div>      
           </div>
